k8s/automation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: automation
  template:
    metadata:
      labels:
        app: automation
    spec:
      containers:
      - name: automation
        image: irontomb/automation:latest
        ports:
        - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: automation-service
spec:
  selector:
    app: automation
  ports:
    - protocol: TCP
      port: 8004
      targetPort: 8004
