k8s/etl-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etl-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etl
  template:
    metadata:
      labels:
        app: etl
    spec:
      containers:
      - name: etl
        image: irontomb/etl:latest
        ports:
        - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: etl-service
spec:
  selector:
    app: etl
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
