k8s/rule-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rule-engine-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rule-engine
  template:
    metadata:
      labels:
        app: rule-engine
    spec:
      containers:
      - name: rule-engine
        image: irontomb/rule-engine:latest
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: rule-engine-service
spec:
  selector:
    app: rule-engine
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
