k8s/validation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validation-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: validation
  template:
    metadata:
      labels:
        app: validation
    spec:
      containers:
      - name: validation
        image: irontomb/validation:latest
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: validation-service
spec:
  selector:
    app: validation
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
